@@ -90,8 +90,6 @@ class PhotoListStore(Gtk.ListStore):
         else:
             interval = self.conf.get_int('interval', 30)
 
-        interval =60 # FIXME
-
         self._timer = glib.timeout_add_seconds(interval, self._start_timer)
         return False
 
