@@ -1,3 +1,7 @@
+2011-11-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* utils/config.py: Use old gconf package. New one has bugs.
+
 2011-11-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* config.py: Added support for gconf.VALUE_LIST.
@@ -13,7 +17,7 @@
 	  a Xfwm bug (issue #97).  Xfwm does not support GDK_GRAVITY
 	  correctly.  The frame window gravity needs be set to
 	  GDK_GRAVITY_NORTH_WEST forcelly.
-	
+
 2011-09-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* image/gtkimage.py: Improved loading speed for large image files
